--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,14 +6,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/posthardy
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=saluhcetin007@gmail.com
+spring.mail.host=smtp.yandex.com
+spring.mail.port=465
+spring.mail.username=salihcetin0@yandex.com
 spring.mail.password=${MAIL_PASSWORD}
-spring.mail.protocol=smtp
+spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.jpa.properties.hibernate.use_sql_comments=true
