Düzenlemeler devam ediyor.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.jpa.show-sql=true
 spring.mail.host=smtp.yandex.com
 spring.mail.port=465
 spring.mail.username=salihcetin0@yandex.com
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.password=bzmblgvdwbehrxsk
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.jpa.properties.hibernate.use_sql_comments=true
-upload.path=D:/post/uploads
+upload.path=C:/post/uploads
