--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -27,7 +27,8 @@
                         "inlineStyleLanguage": "scss",
                         "assets": [
                             "src/assets",
-                            "src/favicon.ico"
+                            "src/favicon.ico",
+                            "static/_redirects"
                         ],
                         "styles": [
                             "src/styles.scss"
