--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=post.hardy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/posthardy
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://dpg-d14iqdjuibrs73agf9f0-a.oregon-postgres.render.com:5432/posthardy
+spring.datasource.username=salih
+spring.datasource.password=bxevV9oSYHbPK70ruBVoofvUOfqKs0kF
 spring.jpa.show-sql=true
 spring.mail.host=smtp.yandex.com
 spring.mail.port=465
